# AgentSparrow

./: PRD.md  README.md  build.bat  build.py  main.py  pyproject.toml  requirements.txt  sparrow-agent.spec  test_gemini.py  test_gemini_direct.py  test_ports.py  test_render.py
agent/: __init__.py  cli.py  config.py
agent/checks/: __init__.py  packages.py  permissions.py  ports.py
agent/installer/: __init__.py  extractor.py  profiles.py  properties.py  runner.py
agent/llm/: __init__.py  base.py  claude.py  gemini.py  openai_client.py  prompts.py
agent/utils/: __init__.py  console.py  network.py  platform_utils.py
